--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,13 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Dominion OS — extra protection
+**/*.map
+**/*.ts
+**/*.tsx
+src/
+config/
+.env
+*.log
+
