--- a/.github/workflows/continuous-polish.yml
+++ b/.github/workflows/continuous-polish.yml
@@ -3,12 +3,11 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *"   # hourly
   workflow_dispatch:
 
 permissions:
   contents: write
-  pull-requests: write
 
 jobs:
   polish:
@@ -17,29 +16,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-      - name: Run polish
-        run: bash tools/polish_all.sh
-      - name: Create PR if changes
-        id: cpr
-        uses: peter-evans/create-pull-request@v6
+      - name: Run Prettier (safe formats only)
+        run: |
+          npx --yes prettier@3 --write "**/*.{md,mdx,json,yml,yaml}" || true
+      - name: Auto-commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          branch: autopolish/${{ github.run_id }}
-          commit-message: "chore: autopolish"
-          title: "Autopolish: ${{ github.run_number }}"
-          body: "Automated formatting & hygiene."
-          labels: "autopilot,polish"
-          signoff: true
-          delete-branch: true
-      - name: Auto-merge (optional)
-        if: ${{ steps.cpr.outputs.pull-request-number && vars.AUTO_MERGE == '1' }}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh pr merge --squash --auto ${{ steps.cpr.outputs.pull-request-number }}
+          commit_message: "chore: autopolish"
+          branch: main
