--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,9 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  node-root:
+    if: hashFiles('package.json') != ''
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -20,4 +19,21 @@ jobs:
       - name: Install deps
         run: npm ci
       - name: Build
+        run: npm run build
+
+  node-app-subdir:
+    if: hashFiles('app/package.json') != ''
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: app/package-lock.json
+      - name: Install deps
+        working-directory: app
+        run: npm ci
+      - name: Build
+        working-directory: app
         run: npm run build
