ci: restore working workflow (matrix, caching, paths, concurrency)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,45 +2,76 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - '.github/workflows/**'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'app/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - '.github/workflows/**'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'app/**'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  node-root:
-    if: ${{ hashFiles('package.json') != '' }}
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        project:
+          - dir: .
+            name: root
+          - dir: app
+            name: app
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
+
+      - name: Detect project
+        id: detect
+        run: |
+          if [ -f "${{ matrix.project.dir }}/package.json" ]; then
+            echo "present=true" >> $GITHUB_OUTPUT
+          else
+            echo "present=false" >> $GITHUB_OUTPUT
+          fi
+
       - uses: actions/setup-node@v4
+        if: ${{ steps.detect.outputs.present == 'true' }}
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: package-lock.json
-      - name: Install deps
+          cache-dependency-path: ${{ matrix.project.dir }}/package-lock.json
+
+      - name: Install
+        if: ${{ steps.detect.outputs.present == 'true' }}
+        working-directory: ${{ matrix.project.dir }}
         run: npm ci
+
+      - name: Test
+        if: ${{ steps.detect.outputs.present == 'true' }}
+        working-directory: ${{ matrix.project.dir }}
+        run: npm test --if-present
+
       - name: Build
+        if: ${{ steps.detect.outputs.present == 'true' }}
+        working-directory: ${{ matrix.project.dir }}
         run: npm run build --if-present
 
-  node-app-subdir:
-    if: ${{ hashFiles('app/package.json') != '' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Upload artifact (dist)
+        if: ${{ steps.detect.outputs.present == 'true' && hashFiles(format('{0}/dist/**', matrix.project.dir)) != '' }}
+        uses: actions/upload-artifact@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: app/package-lock.json
-      - name: Install deps
-        working-directory: app
-        run: npm ci
-      - name: Build
-        working-directory: app
-        run: npm run build --if-present
-
-  noop:
-    if: ${{ hashFiles('package.json') == '' && hashFiles('app/package.json') == '' }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "No Node projects detected; skipping."
+          name: ${{ matrix.project.name }}-dist
+          path: ${{ matrix.project.dir }}/dist
