--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,18 +44,42 @@ jobs:
           else
             echo "present=false" >> "$GITHUB_OUTPUT"
           fi
+          if [ -f "${{ matrix.project.dir }}/package-lock.json" ]; then
+            echo "lock=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "lock=false" >> "$GITHUB_OUTPUT"
+          fi
+          if [ -f "${{ matrix.project.dir }}/.nvmrc" ]; then
+            echo "nvmrc=${{ matrix.project.dir }}/.nvmrc" >> "$GITHUB_OUTPUT"
+          else
+            echo "nvmrc=" >> "$GITHUB_OUTPUT"
+          fi
 
+      # Use .nvmrc if present
       - uses: actions/setup-node@v4
-        if: ${{ steps.detect.outputs.present == 'true' }}
+        if: ${{ steps.detect.outputs.present == 'true' && steps.detect.outputs.nvmrc != '' }}
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version-file: ${{ steps.detect.outputs.nvmrc }}
+          cache: npm
           cache-dependency-path: ${{ matrix.project.dir }}/package-lock.json
 
-      - name: Install
+      # Otherwise pin Node 20
+      - uses: actions/setup-node@v4
+        if: ${{ steps.detect.outputs.present == 'true' && steps.detect.outputs.nvmrc == '' }}
+        with:
+          node-version: '20'
+          cache: npm
+          cache-dependency-path: ${{ matrix.project.dir }}/package-lock.json
+
+      - name: Install (use ci if lockfile exists)
         if: ${{ steps.detect.outputs.present == 'true' }}
         working-directory: ${{ matrix.project.dir }}
-        run: npm ci
+        run: |
+          if [ "${{ steps.detect.outputs.lock }}" = "true" ]; then
+            npm ci
+          else
+            npm install
+          fi
 
       - name: Test
         if: ${{ steps.detect.outputs.present == 'true' }}
@@ -74,3 +98,4 @@ jobs:
           name: ${{ matrix.project.name }}-dist
           path: ${{ matrix.project.dir }}/dist
           if-no-files-found: ignore
+          retention-days: 7
