ci: add steps to workflows to avoid startup_failure

--- a/.github/workflows/no-actions.yml
+++ b/.github/workflows/no-actions.yml
@@ -8,4 +8,4 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Runner started OK"
+      - run: echo "No marketplace actions; policy-safe"
