--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,19 +6,11 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-permissions:
-  contents: read
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   sanity:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: echo "Workflow parsed and runner started ✅"
+      - run: echo "Workflow parsed and running ✅"
 
   node-root:
     if: ${{ hashFiles('package.json') != '' }}
@@ -30,34 +22,5 @@ jobs:
           node-version: '20'
           cache: npm
           cache-dependency-path: package-lock.json
-      - name: Install deps
-        run: npm ci
-      - name: Build
-        run: npm run build --if-present
-      - uses: actions/upload-artifact@v4
-        with:
-          name: root-dist
-          path: dist
-          if-no-files-found: ignore
-
-  node-app:
-    if: ${{ hashFiles('app/package.json') != '' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: npm
-          cache-dependency-path: app/package-lock.json
-      - name: Install deps
-        working-directory: app
-        run: npm ci
-      - name: Build
-        working-directory: app
-        run: npm run build --if-present
-      - uses: actions/upload-artifact@v4
-        with:
-          name: app-dist
-          path: app/dist
-          if-no-files-found: ignore
+      - run: npm ci
+      - run: npm run build --if-present
