--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -8,5 +8,4 @@ jobs:
   sanity:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: echo "Runner started"
+      - run: echo "Runner started OK"
