--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI (build+test)
 on:
   pull_request:
-    branches: [ "main", "release/**" ]
+    branches:
+      - main
+      - "release/**"
+  workflow_dispatch: {}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,5 +16,3 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo "tests ok"
-
-# tickle
