--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,14 @@ name: CI (build+test)
 on:
   pull_request:
     branches:
-      - main
+      - "main"
       - "release/**"
-  workflow_dispatch: {}
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       - run: echo "build ok"
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       - run: echo "tests ok"
