--- a/.github/workflows/governance-suite.yml
+++ b/.github/workflows/governance-suite.yml
@@ -4,10 +4,28 @@ on:
     pull_request:
         branches:
             - main
+    workflow_dispatch:
 
 jobs:
     governance:
+        name: Run governance suite
         runs-on: ubuntu-latest
+        timeout-minutes: 20
         steps:
-            - name: Run governance suite stub
-              run: echo "governance suite ok"
+            - name: Checkout repository
+                uses: actions/checkout@v4
+
+            - name: Set up Python
+                uses: actions/setup-python@v5
+                with:
+                    python-version: "3.11"
+
+            - name: Install Python dependencies
+                run: |
+                    python -m pip install --upgrade pip
+                    pip install pytest
+
+            - name: Run tests
+                env:
+                    TMP: ${{ runner.temp }}
+                run: pytest -q
