--- a/github/workflows/github/workflows/pages.yml
+++ b/github/workflows/github/workflows/pages.yml
@@ -1,7 +1,7 @@
 name: Deploy Demo to GitHub Pages
 on:
   push:
-    branches: [ demo ]   # <- use a dedicated 'demo' branch
+    branches: [demo] # <- use a dedicated 'demo' branch
 permissions:
   pages: write
   id-token: write
@@ -24,7 +24,7 @@ jobs:
           find out -type f -name ".DS_Store" -delete
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
-        with: { path: 'out' }
+        with: { path: "out" }
   deploy:
     needs: build
     environment:
