--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "github.copilot",
     "github.copilot-chat",
     "github.vscode-github-actions",
+    "ms-azuretools.vscode-docker",
     "redhat.vscode-yaml",
     "DavidAnson.vscode-markdownlint",
     "dbaeumer.vscode-eslint",
