--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,10 @@
       "label": "Demo: Run tests",
       "type": "shell",
       "command": "bash",
-      "args": ["-lc", "pytest -q"],
+      "args": [
+        "-lc",
+        "python3 -m venv .venv && source .venv/bin/activate && python -m pip install --upgrade pip && pip install -q pytest && PYTHONPATH=. pytest -q"
+      ],
       "options": { "cwd": "${workspaceFolder}" },
       "presentation": { "reveal": "always" },
       "problemMatcher": ["$pytest"]
