--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,42 @@
     "MD013": false,
     "MD047": true,
     "MD010": true
+  {
+    // Editor ergonomics
+    "files.autoSave": "onFocusChange",
+    "files.trimTrailingWhitespace": true,
+    "editor.formatOnSave": true,
+    "editor.inlineSuggest.enabled": true,
+    "editor.quickSuggestions": {
+      "other": true,
+      "comments": false,
+      "strings": true
+    },
+
+    // Python tooling
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "python.analysis.typeCheckingMode": "standard",
+    "python.formatting.provider": "black",
+    "[python]": {
+      "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+
+    // Linting (Ruff)
+    "ruff.organizeImports": true,
+    "ruff.lint.args": ["--select", "E,W,F,B,I"],
+
+    // YAML validation
+    "yaml.validate": true,
+    "yaml.schemaStore.enable": true,
+
+    // Telemetry / trust
+    "telemetry.telemetryLevel": "off",
+    "workbench.enableExperiments": false,
+    "security.workspace.trust.enabled": true,
+
+    // Terminal persistence
+    "terminal.integrated.defaultProfile.linux": "bash",
+    "terminal.integrated.persistentSessionReviveProcess": "onExit"
   }
-}
