chore: add CODEOWNERS to streamline reviews (terrain viewer: @Fractal5-X)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,2 @@
-web/terrain-viewer/**  @Fractal5-Solutions/maintainers
-.github/workflows/proof-html.yml  @Fractal5-Solutions/secops @Fractal5-Solutions/maintainers
-
+* @Fractal5-X
+web/terrain-viewer/* @Fractal5-X
