--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,20 @@
 {
   "recommendations": [
+    "github.copilot",
+    "github.copilot-chat",
+    "ms-python.python",
+    "ms-toolsai.jupyter",
+    "github.vscode-github-actions",
+    "ms-azuretools.vscode-docker",
+    "ms-vscode.powershell",
+    "streetsidesoftware.code-spell-checker",
+    "gruntfuggly.todo-tree",
+    "ms-vscode-remote.remote-containers",
+    "googlecloudtools.cloudcode"
+  ]
+}
+{
+  "recommendations": [
     "ms-python.python",
     "ms-python.vscode-pylance",
     "charliermarsh.ruff",
