--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,21 @@
 {
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 800,
+  "telemetry.telemetryLevel": "off",
+  "workbench.editor.enablePreview": false,
+
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+  "python.formatting.provider": "black",
+  "python.formatting.blackArgs": ["--line-length", "100"],
+  "python.testing.pytestEnabled": true,
+  "python.testing.pytestArgs": ["-q"],
+  "python.terminal.activateEnvironment": true,
+
+  "editor.inlineSuggest.enabled": true,
+  "editor.quickSuggestions": {"other": true, "comments": false, "strings": true},
+  "copilot.enable": {"*": true}
+}
+{
   "python.defaultInterpreterPath": "./.venv/bin/python",
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": ["-q"],
