--- a/.github/workflows-archived/continuous-polish.yml
+++ b/.github/workflows-archived/continuous-polish.yml
@@ -1,5 +1,1 @@
-{
-  "message": "Not Found",
-  "documentation_url": "https://docs.github.com/rest",
-  "status": "404",
-}
+{ "message": "Not Found", "documentation_url": "https://docs.github.com/rest", "status": "404" }
