--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,31 +3,29 @@
     "github.copilot",
     "github.copilot-chat",
     "ms-python.python",
+    "ms-python.vscode-pylance",
+    "ms-python.black-formatter",
+    "charliermarsh.ruff",
     "ms-toolsai.jupyter",
     "github.vscode-github-actions",
     "ms-azuretools.vscode-docker",
     "ms-vscode.powershell",
-    "streetsidesoftware.code-spell-checker",
-    "gruntfuggly.todo-tree",
-    "ms-vscode-remote.remote-containers",
-    "googlecloudtools.cloudcode"
-  ]
-}
-{
-  "recommendations": [
-    "ms-python.python",
-    "ms-python.vscode-pylance",
-    "charliermarsh.ruff",
-    "ms-python.black-formatter",
-    "esbenp.prettier-vscode",
-    "github.copilot",
-    "github.copilot-chat",
-    "github.vscode-github-actions",
-    "ms-azuretools.vscode-docker",
     "redhat.vscode-yaml",
     "DavidAnson.vscode-markdownlint",
     "dbaeumer.vscode-eslint",
     "streetsidesoftware.code-spell-checker",
-    "yzhang.markdown-all-in-one"
+    "gruntfuggly.todo-tree",
+    "ms-vscode-remote.remote-containers",
+    "googlecloudtools.cloudcode",
+    "yzhang.markdown-all-in-one",
+    "ms-vscode.vscode-json",
+    "ms-vscode.vscode-typescript-next",
+    "bradlc.vscode-tailwindcss",
+    "esbenp.prettier-vscode",
+    "ms-vscode-remote.remote-wsl",
+    "ms-windows-ai-studio.windows-ai-studio",
+    "ms-vscode.vscode-github-issue-notebooks",
+    "eamodio.gitlens",
+    "ms-vscode.makefile-tools"
   ]
 }
