--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,82 +1,92 @@
 {
+  "extensions.ignoreRecommendations": false,
+  "extensions.autoUpdate": true,
+  "extensions.autoCheckUpdates": true,
+
   "files.autoSave": "afterDelay",
   "files.autoSaveDelay": 800,
+  "files.trimTrailingWhitespace": true,
+  "editor.formatOnSave": true,
+  "editor.inlineSuggest.enabled": true,
+  "editor.quickSuggestions": { "other": true, "comments": false, "strings": true },
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "explicit",
+    "source.organizeImports": "explicit"
+  },
+
   "telemetry.telemetryLevel": "off",
   "workbench.editor.enablePreview": false,
+  "workbench.enableExperiments": false,
+  "security.workspace.trust.enabled": true,
 
   "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
   "python.formatting.provider": "black",
   "python.formatting.blackArgs": ["--line-length", "100"],
   "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
   "python.testing.pytestArgs": ["-q"],
   "python.terminal.activateEnvironment": true,
+  "python.analysis.typeCheckingMode": "standard",
+  "[python]": { "editor.defaultFormatter": "ms-python.black-formatter" },
 
-  "editor.inlineSuggest.enabled": true,
-  "editor.quickSuggestions": {"other": true, "comments": false, "strings": true},
-  "copilot.enable": {"*": true}
-}
-{
-  "python.defaultInterpreterPath": "./.venv/bin/python",
-  "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": ["-q"],
   "python.linting.enabled": true,
   "python.linting.ruffEnabled": true,
-  "python.formatting.provider": "black",
-  "editor.formatOnSave": true,
+  "ruff.organizeImports": true,
+  "ruff.lint.args": ["--select", "E,W,F,B,I"],
+
   "files.exclude": {
     "**/.git/**": true,
     "**/__pycache__/**": true,
     "**/.pytest_cache/**": true,
     "**/.venv/**": true,
-    "**/dist/**": true
+    "**/dist/**": true,
+    "**/node_modules/**": true
   },
   "files.watcherExclude": {
     "**/.git/objects/**": true,
     "**/__pycache__/**": true,
     "**/.pytest_cache/**": true,
     "**/.venv/**": true,
-    "**/dist/**": true
+    "**/dist/**": true,
+    "**/node_modules/**": true
   },
+
   "markdownlint.config": {
     "MD013": false,
     "MD047": true,
     "MD010": true
-  {
-    // Editor ergonomics
-    "files.autoSave": "onFocusChange",
-    "files.trimTrailingWhitespace": true,
-    "editor.formatOnSave": true,
-    "editor.inlineSuggest.enabled": true,
-    "editor.quickSuggestions": {
-      "other": true,
-      "comments": false,
-      "strings": true
-    },
+  },
 
-    // Python tooling
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.analysis.typeCheckingMode": "standard",
-    "python.formatting.provider": "black",
-    "[python]": {
-      "editor.defaultFormatter": "ms-python.black-formatter"
-    },
+  "yaml.validate": true,
+  "yaml.schemaStore.enable": true,
 
-    // Linting (Ruff)
-    "ruff.organizeImports": true,
-    "ruff.lint.args": ["--select", "E,W,F,B,I"],
+  "terminal.integrated.defaultProfile.linux": "bash",
+  "terminal.integrated.persistentSessionReviveProcess": "onExit",
 
-    // YAML validation
-    "yaml.validate": true,
-    "yaml.schemaStore.enable": true,
+  "copilot.enable": { "*": true },
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false
+  },
+  "github.copilot.chat.codeGeneration.instructions": [
+    {
+      "text": "You are an expert AI programming assistant working in VS Code. Follow user requirements carefully. Keep answers short and impersonal. Use proper Markdown formatting."
+    }
+  ],
 
-    // Telemetry / trust
-    "telemetry.telemetryLevel": "off",
-    "workbench.enableExperiments": false,
-    "security.workspace.trust.enabled": true,
+  "git.autofetch": true,
+  "git.enableSmartCommit": true,
+  "git.confirmSync": false,
 
-    // Terminal persistence
-    "terminal.integrated.defaultProfile.linux": "bash",
-    "terminal.integrated.persistentSessionReviveProcess": "onExit"
-  }
+  "docker.showStartPage": false,
+  "cloudcode.enableTelemetry": false,
+
+  "powershell.powerShellDefaultVersion": "PowerShell Core 7+ (x64)",
+  "powershell.integratedConsole.showOnStartup": false,
+
+  "eslint.workingDirectories": ["."],
+  "prettier.configPath": "",
+  "prettier.ignorePath": ".prettierignore"
+}
