--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,22 +42,14 @@
             "options": { "cwd": "${workspaceFolder}" },
             "group": "build",
             "problemMatcher": []
-        }
-        ,
+        },
         {
             "label": "Copilot: Demo Build — Test & Polish",
             "type": "shell",
             "command": "bash",
             "args": [
                 "-lc",
-                [
-                    "python3 -m venv .venv && source .venv/bin/activate",
-                    "python -m pip install --upgrade pip",
-                    "pip install -q pytest",
-                    "PYTHONPATH=. pytest -q",
-                    "chmod +x tools/polish_all.sh",
-                    "tools/polish_all.sh"
-                ].join(" && ")
+                "python3 -m venv .venv && source .venv/bin/activate && python -m pip install --upgrade pip && pip install -q pytest && PYTHONPATH=. pytest -q && chmod +x tools/polish_all.sh && tools/polish_all.sh"
             ],
             "options": { "cwd": "${workspaceFolder}" },
             "presentation": { "reveal": "always", "panel": "dedicated" },
