chore: ignore backups; normalize build artifact tracking

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 .pytest_cache/
 .venv/
 dist/
+.DS_Store
+
+# Ignore local backup archives
+out/backups/
 image-digest.txt
 out/autopilot/
 
