--- a/.github/workflows/gcp-release.yml
+++ b/.github/workflows/gcp-release.yml
@@ -1,41 +1,105 @@
 name: gcp-release
+
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
+
 permissions:
   contents: read
   id-token: write
+
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  REGION: ${{ vars.GCP_REGION || 'us-central1' }}
+  SERVICE_NAME: ${{ vars.GCP_SERVICE_NAME || 'dominion-demo-build' }}
+  # Expected to be an Artifact Registry image reference (tag or digest)
+  SIGN_IMAGE: ${{ secrets.SIGN_IMAGE }}
+  ALLOW_UNAUTH: ${{ vars.GCP_ALLOW_UNAUTH || 'false' }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
-    env:
-      GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-      GCP_WIF_PROVIDER: ${{ secrets.GCP_WIF_PROVIDER }}
-      GCP_WIF_SA_EMAIL: ${{ secrets.GCP_WIF_SA_EMAIL }}
     steps:
-      - name: Install deps (gcloud + jq)
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+
+      - name: Auth GCP (Workload Identity)
+        uses: google-github-actions/auth@c200f3691d83b41bf9bbd8638997a462592937ed # v2.1.13 pinned
+        with:
+          workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
+          service_account: ${{ secrets.GCP_WIF_SA_EMAIL }}
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Set up gcloud
+        uses: google-github-actions/setup-gcloud@e427ad8a34f8676edf47cf7d7925499adf3eb74f # v2.2.1
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Configure Docker auth (Artifact Registry)
+        shell: bash
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y ca-certificates curl gnupg jq
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg
-          sudo apt-get update -y && sudo apt-get install -y google-cloud-cli
-      - name: Assert secrets present
-        run: test -n "$GCP_PROJECT_ID" && test -n "$GCP_WIF_PROVIDER" && test -n "$GCP_WIF_SA_EMAIL"
-      - name: Fetch OIDC ID token
+          set -euo pipefail
+          if [ -z "${SIGN_IMAGE:-}" ]; then
+            echo "Missing secrets.SIGN_IMAGE (expected Artifact Registry image path)" >&2
+            exit 1
+          fi
+          base="${SIGN_IMAGE%@*}"
+          base="${base%:*}"
+          host="$(echo "$base" | cut -d'/' -f1)"
+          gcloud auth configure-docker "$host" --quiet
+          echo "IMAGE_BASE=$base" >> "$GITHUB_ENV"
+
+      - name: Build and push image (sha + latest)
+        shell: bash
         run: |
-          curl -sS -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=gha" | jq -r .value > idt.txt
-      - name: Exchange for GCP access token
+          set -euo pipefail
+          image_sha="${IMAGE_BASE}:${GITHUB_SHA}"
+          image_latest="${IMAGE_BASE}:latest"
+          docker build -t "$image_sha" -t "$image_latest" .
+          docker push "$image_sha"
+          docker push "$image_latest"
+
+      - name: Resolve digest
+        id: digest
+        shell: bash
         run: |
-          AT=$(curl -sS -H "Content-Type: application/json" \
-             -d "{\"audience\":\"//$GCP_WIF_PROVIDER\",\"grantType\":\"urn:ietf:params:oauth:grant-type:token-exchange\",\"requested_token_type\":\"urn:ietf:params:oauth:token-type:access_token\",\"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\",\"subject_token\":\"$(cat idt.txt)\",\"scope\":\"https://www.googleapis.com/auth/cloud-platform\"}" \
-             https://sts.googleapis.com/v1/token | jq -r .access_token)
-          echo "$AT" > access_token.txt
-      - name: Configure gcloud (placeholder)
+          set -euo pipefail
+          image_sha="${IMAGE_BASE}:${GITHUB_SHA}"
+          digest=$(gcloud artifacts docker images describe "$image_sha" --project "$PROJECT_ID" --format='value(image_summary.digest)' 2>/dev/null || true)
+          if [ -z "$digest" ]; then
+            digest=$(gcloud container images describe "$image_sha" --format='value(image_summary.digest)' 2>/dev/null || true)
+          fi
+          if [ -z "$digest" ]; then
+            echo "ERROR: Failed to resolve digest for $image_sha" >&2
+            exit 1
+          fi
+          image_ref="${IMAGE_BASE}@${digest}"
+          if ! printf '%s' "$image_ref" | grep -q "@sha256:"; then
+            echo "ERROR: Expected digest-pinned image ref, got $image_ref" >&2
+            exit 1
+          fi
+          echo "image_ref=$image_ref" >> "$GITHUB_OUTPUT"
+
+      - name: Deploy to Cloud Run (digest)
+        shell: bash
         run: |
-          gcloud config set project "$GCP_PROJECT_ID"
-          gcloud auth activate-service-account "$GCP_WIF_SA_EMAIL" --key-file <(echo '{}') || true
-      - name: Release step (placeholder)
+          set -euo pipefail
+          auth_flag="--no-allow-unauthenticated"
+          if [[ "${ALLOW_UNAUTH,,}" == "true" ]]; then auth_flag="--allow-unauthenticated"; fi
+          gcloud run deploy "$SERVICE_NAME" \
+            --image "${{ steps.digest.outputs.image_ref }}" \
+            --region "$REGION" \
+            --project "$PROJECT_ID" \
+            $auth_flag \
+            --platform managed \
+            --quiet
+
+          url=$(gcloud run services describe "$SERVICE_NAME" --region "$REGION" --project "$PROJECT_ID" --format='value(status.url)')
+          echo "SERVICE_URL=$url" >> "$GITHUB_ENV"
+
+      - name: Health check
+        shell: bash
         run: |
-          echo "Ready for gcloud deploys."
+          set -euo pipefail
+          curl -fsS "$SERVICE_URL/healthz" >/dev/null
