--- a/config/env.example
+++ b/config/env.example
@@ -6,3 +6,12 @@ DEMO_BUILD_UI_PORT=8080
 
 # Optional telemetry endpoint if demo needs it
 OTEL_EXPORTER_OTLP_ENDPOINT=
+
+# GitHub credentials (set these to enable pushes and CI dispatch)
+# Fine-grained token recommended; must have:
+# - contents:write on the target repository
+# - workflows:read (optional) and repo:workflow for dispatching CI
+# Also ensure the token is authorized for your organization via SSO if required.
+GH_TOKEN=
+GH_OWNER=Fractal5-Solutions
+GH_REPO=dominion-os-demo-build
