fix(security): Correct spelling to Plane4 Grain Inc
Changed 'Plane4 Grian Inc' to 'Plane4 Grain Inc' across all files:

• .github/CODEOWNERS

• config/superuser-authority.json (plane4_grain_inc)

• config/organizational-authority.json

• SECURITY_GOVERNANCE.md (2 locations)

• SUPERUSER_HARDENING_PLAN.md

Confirmed by superuser: Correct spelling is 'Plane4 Grain Inc.'

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 # CODEOWNERS for dominion-os-demo-build
 # Superuser & Code Owner: Matthew Burbidge (matthewburbidge@fractal5solutions.com)
-# Sole Employee - Fractal5 Solutions Inc, Blue Wave Action Group Inc, Plane4 Grian Inc
+# Sole Employee - Fractal5 Solutions Inc, Blue Wave Action Group Inc, Plane4 Grain Inc
 
 # Global ownership - all code owned by Matthew Burbidge
 * @Fractal5-X
