feat: Production deployment with LiveOps infrastructure
Deploy PHI Expenditure Dashboard to Cloud Run with full monitoring,
security hardening, and comprehensive documentation.

Key Changes:
- Production-hardened Dockerfile with multi-stage build
- Resource limits (CPU: 2 cores, Memory: 2Gi)
- Security hardening (non-root user, read-only FS)
- Comprehensive monitoring with phi_resource_monitor.sh
- Cloud Monitoring integration with alerts
- Minimum instances=1 for zero cold starts
- Complete documentation suite

Production readiness: 100% (21/21 checks passed)
Service URL: https://phi-expenditure-dashboard-447370233441.us-central1.run.app
Revision: phi-expenditure-dashboard-00003-mjt
Status: OPERATIONAL

--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -20,8 +20,8 @@ cryptography>=41.0.0
 # Excel Export (Optional)
 # openpyxl>=3.1.2
 
-# Production WSGI Server (Optional for deployment)
-# gunicorn>=21.2.0
+# Production WSGI Server
+gunicorn>=21.2.0
 
 # Testing (Optional)
 # pytest>=7.4.0
