--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -6,20 +6,40 @@ services:
     image: postgres:14-alpine
     container_name: phi-expenditure-db
     environment:
-      POSTGRES_USER: phi_admin
-      POSTGRES_PASSWORD: secure_password_phi_2026
-      POSTGRES_DB: expenditures
+      POSTGRES_USER: ${POSTGRES_USER:-phi_admin}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-secure_password_phi_2026}
+      POSTGRES_DB: ${POSTGRES_DB:-expenditures}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - phi_expenditure_data:/var/lib/postgresql/data
+      - ./backups:/backups
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U phi_admin"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-phi_admin}"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
     networks:
       - phi_network
+    restart: unless-stopped
+    # Security hardening
+    security_opt:
+      - no-new-privileges:true
+    # Resource limits
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Expenditure Dashboard
   dashboard:
@@ -28,22 +48,46 @@ services:
       dockerfile: Dockerfile.expenditure
     container_name: phi-expenditure-dashboard
     environment:
-      EXPENDITURE_DB: "postgresql://phi_admin:secure_password_phi_2026@postgres:5432/expenditures"
-      FLASK_SECRET_KEY: "phi_secret_key_2026_production_change_me"
+      EXPENDITURE_DB: "postgresql://${POSTGRES_USER:-phi_admin}:${POSTGRES_PASSWORD:-secure_password_phi_2026}@postgres:5432/${POSTGRES_DB:-expenditures}"
+      FLASK_SECRET_KEY: ${FLASK_SECRET_KEY:-phi_secret_key_2026_production_change_me}
+      FLASK_DEBUG: ${FLASK_DEBUG:-false}
+      DEMO_MODE: ${DEMO_MODE:-false}
       GMAIL_CREDENTIALS_PATH: "/app/credentials.json"
       GMAIL_TOKEN_PATH: "/app/token.json"
     ports:
-      - "5000:5000"
+      - "${DASHBOARD_PORT:-5000}:5000"
     depends_on:
       postgres:
         condition: service_healthy
     volumes:
       - ./credentials.json:/app/credentials.json:ro
       - ./token.json:/app/token.json:ro
-      - ../telemetry:/app/telemetry
+      - ./telemetry:/app/telemetry
+      - ./backups:/app/backups
     networks:
       - phi_network
     restart: unless-stopped
+    # Security hardening
+    security_opt:
+      - no-new-privileges:true
+    read_only: true
+    tmpfs:
+      - /tmp
+      - /app/.cache
+    # Resource limits
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   phi_expenditure_data:
